--- a/部署文件/HotFixDemo/app/build.gradle
+++ b/部署文件/HotFixDemo/app/build.gradle
@@ -44,7 +44,7 @@ android {
     }
     buildTypes {
         release {
-//            signingConfig signingConfigs.release
+            signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -85,7 +85,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.0'
     //    testCompile 'junit:junit:4.12'
     compile 'com.android.support:multidex:1.0.1'
-    compile(name: 'patchsdk-1.8.1', ext: 'aar')
+    compile(name: 'patchsdk-1.8.3', ext: 'aar')
     //    compile(name: 'hotfix-android-lib-1.8.1', ext: 'aar')
     //    compile(name: 'hotfix-android-loader-1.8.1', ext: 'aar')
     //    compile 'com.tencent.tinker:tinker-android-lib:1.8.1'
